--- a/comp2212-csv-query-language.cabal
+++ b/comp2212-csv-query-language.cabal
@@ -6,7 +6,7 @@ cabal-version: 2.2
 
 name:           comp2212-csv-query-language
 version:        0.1.0.0
-description:    Alex and Happy project.
+description:    A domain-specific language for querying CSV files
 homepage:       https://github.com/githubuser/comp2212-csv-query-language#readme
 bug-reports:    https://github.com/githubuser/comp2212-csv-query-language/issues
 author:         Author name here
@@ -27,9 +27,10 @@ library
   exposed-modules:
       CSV
       Lexer
-      Lib
       Parser
+      Interpreter
   other-modules:
+      Lib
       Paths_comp2212_csv_query_language
   autogen-modules:
       Paths_comp2212_csv_query_language
@@ -40,6 +41,8 @@ library
       array
     , base >=4.7 && <5
     , containers
+    , directory
+    , mtl
   default-language: Haskell2010
   build-tool-depends:
     alex:alex,
@@ -59,6 +62,8 @@ executable comp2212-csv-query-language-exe
     , base >=4.7 && <5
     , comp2212-csv-query-language
     , containers
+    , directory
+    , mtl
   default-language: Haskell2010
 
 test-suite comp2212-csv-query-language-test
@@ -76,4 +81,6 @@ test-suite comp2212-csv-query-language-test
     , base >=4.7 && <5
     , comp2212-csv-query-language
     , containers
+    , directory
+    , mtl
   default-language: Haskell2010
